crates/mun_codegen/src/snapshots/mun_codegen__test__arithmetic_op_i128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn add(a: i128, b: i128) -> i128 { a + b }\n    pub fn subtract(a: i128, b: i128) -> i128 { a - b }\n    pub fn multiply(a: i128, b: i128) -> i128 { a * b }\n    pub fn divide(a: i128, b: i128) -> i128 { a / b }\n    pub fn remainder(a: i128, b: i128) -> i128 { a % b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i128 @add(i128 %0, i128 %1) {
body:
  %add = add i128 %0, %1
  ret i128 %add
}

define i128 @subtract(i128 %0, i128 %1) {
body:
  %sub = sub i128 %0, %1
  ret i128 %sub
}

define i128 @multiply(i128 %0, i128 %1) {
body:
  %mul = mul i128 %0, %1
  ret i128 %mul
}

define i128 @divide(i128 %0, i128 %1) {
body:
  %div = sdiv i128 %0, %1
  ret i128 %div
}

define i128 @remainder(i128 %0, i128 %1) {
body:
  %rem = srem i128 %0, %1
  ret i128 %rem
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
